Header overflow fix

--- a/static/style.css
+++ b/static/style.css
@@ -25,7 +25,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px 20px; /* Ajout de padding pour un meilleur aspect visuel */
     box-sizing: border-box; /* Pour inclure le padding dans la largeur totale */
-    width: 1920px;
+    width: 100%;
     height: 84px;
 }
 
